--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 PORT=8000
-MONGO_URI=mongodb+srv://vermataashi_db_user:Ub93qcoP3pjNQC6N@vitals360.tsrk2wo.mongodb.net/
-# MONGO_URI=mongodb://127.0.0.1:27017/vitals360
+MONGO_URI=mongodb://127.0.0.1:27017/vitals360
 JWT_SECRET=supersecretkey
